force-app/main/default/objects/AI_Config__mdt/AI_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the AI Chatbot, including API keys and model settings.</description>
    <label>AI Config</label>
    <pluralLabel>AI Configs</pluralLabel>
</CustomObject>