force-app/main/default/objects/AI_Config__mdt/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <description>The Anthropic API key. Store as protected field — never expose in logs.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>