force-app/main/default/objects/AI_Config__mdt/fields/MaxTokens__c.field-meta.xml
<CustomField>
    <fullName>MaxTokens__c</fullName>
    <description>Maximum output tokens for each LLM call.</description>
    <label>Max Tokens</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>