force-app/main/default/objects/AI_Config__mdt/fields/ModelName__c.field-meta.xml
<CustomField>
    <fullName>ModelName__c</fullName>
    <description>The Anthropic Claude model identifier to use.</description>
    <label>Model Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>